--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,8 @@
-<h2 id="title">Welcome to Ember.js</h2>
-
-{{outlet}}
+<div class="container">
+  <div class="row">
+    <h2 id="title" class="center-align brown-text text-darken-1">Recipe Directory</h2>
+  </div>
+  {{outlet}}
+</div>
+{{!-- ember-cli-materialize modal container --}}
+{{md-modal-container}}  
