Add input for search recipe

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -2,6 +2,11 @@
   <div class="row">
     <h2 id="title" class="center-align brown-text text-darken-1">Recipe Directory</h2>
   </div>
+  <div class="row">
+    <div class="col s12 z-depth-1 grey lighten-5">
+      {{input placeholder="Search your recipe books here"}}    
+    </div>
+  </div>
   {{outlet}}
 </div>
 {{!-- ember-cli-materialize modal container --}}
